# ani_util_web

./: .gitignore
backend/: Cargo.toml
backend/src/: ani_meta.rs  auth.rs  db.rs  main.rs
frontend/: home.css  home.html  home.js  login.css  login.html  login.js  signup.css  signup.html  signup.js
frontend/css/: anihome.css  index.css  signup.css
frontend/js/: anihome.js  index.js  login.js  reset.js  signup.js
frontend/pages/: anihome.html  index.html  login.html  reset.html  signup.html
