[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
axum = "0.8.9"
axum-extra = { version = "0.12.6", features = ["cookie"] }
futures = "0.3.32"
reqwest = { version = "0.13.4", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "sqlite"] }
time = "0.3.51"
tokio = { version = "1.52.3", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.11", features = ["cors", "fs"] }
uuid = { version = "1.23.4", features = ["v7"] }
